--- a/style.css
+++ b/style.css
@@ -189,6 +189,98 @@ margin-top: 4em;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
+    width: 80%;
+    padding: 5em 0;
+
 }
 
+.quality_container_section {
+
+    width: 50%;
+
+}
+
+.quality_image_container {
+
+    width: 80%;
+
+}
+
+.quality_image_container img {
+
+    width: 80%;
+
+}
+
+.quality_section {
+
+    display: flex;
+    align-items: center;
+    margin-bottom: 1em;
+
+}
+
+.quality_section .fas {
+
+    color: orange;
+    font-size: 1.7rem;
+    margin-right: 1em;
+    width: 10%;
+    height: 30px;
+
+}
+
+.quality_text p {
+
+    font-size: .9rem;
+
+}
+
+/* items section */
+
+.heading {
+
+    text-align: center;
+    font-size: 3rem;
+    font-family: 'Stylish', sans-serif;
+
+}
+
+.items_img_container {
+
+    width: 80%;
+    /* background-color: burlywood; */
+    margin:  1em auto 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+
+}
+
+.items_images {
+
+    width: 20%;
+    margin: 3em;
+    height: 8rem;
+
+
+
+    
+}
+
+.items_images img {
+
+    width: 90%;
+    object-position: contain;
+    height: 10rem;
+    filter: drop-shadow(.1em .1em .2em var(--orange));
+
+}
+
+
+
+
+/* quality section ends here */
 
