--- a/style.css
+++ b/style.css
@@ -97,7 +97,6 @@ border-bottom: 1px solid var(--orange);
 
 #bars {
 
-    display: none;
     font-size: 1.3rem;
 
 }
@@ -279,8 +278,142 @@ margin-top: 4em;
 
 }
 
-
-
-
 /* quality section ends here */
+
+
+/* reviews section */
+
+.review_container {
+
+    margin-top: 1em;
+
+}
+
+.reviews_box {
+
+    justify-content: space-around;
+    display: flex;
+    align-items: center;
+    margin: 2em 0 3em;
+    background-color: black;
+    flex-wrap: wrap;
+
+}
+
+.reviews {
+
+    display: flex;
+    justify-content: space-around;
+    margin: 1.5em 0;
+    padding: 1em;
+    width: 22%;
+    box-shadow: .1em .1em .2em var(--orange);
+    transition: .5s all ease-in;
+
+}
+
+.reviews:hover {
+
+    box-shadow: .1em .1em .2em white;
+
+}
+
+.review_img {
+
+    width: 100%;
+    height: 50px;
+    object-fit: contain;
+
+}
+
+.review_txt h2 {
+
+    /* color: var(--orange) */
+    color: orange;
+
+}
+
+.review_txt p {
+
+    color: white;
+    font-size: .9rem;
+
+}
+
+/* footer section */
+
+.footer_container {
+    background-image: linear-gradient(orange,rgba(0,0,0,3));
+}
+
+.footer {
+
+    display: flex;
+    justify-content: space-around;
+    padding: 2em;
+    flex-wrap: wrap;
+
+}
+
+.footer_first h1 {
+
+    font-family:" Stylish', sans-serif";
+
+}
+
+.footer_first .fab {
+
+    font-size: 1.5rem;
+
+}
+
+.fab:hover {
+
+    color: white;
+
+}
+
+.footer_second p {
+
+    font-size: .9rem;
+
+}
+
+.footer_third h2 {
+
+    font-family: "Stylish', sans-serif";
+
+}
+
+.footer_third p {
+
+    font-weight: 500;
+    
+}
+
+.footer_fourth h2 {
+
+    font-family: "Stylish', sans-serif";
+
+}
+
+.footer_fourth .fab {
+
+    font-size: 1.5rem;
+    margin: 1em 0 1em 1em;
+
+}
+
+.footer_copyright {
+
+    text-align: center;
+    font-family: "Stylish', sans-serif";
+
+}
+
+
+/* footer section ends here */
+
+
+/* reviews section ends here */
 
