--- a/responsive.css
+++ b/responsive.css
@@ -1,4 +1,4 @@
-@media screen and (max-wisth: 990px) {
+@media screen and (max-width: 990px) {
 html{
     font-size: 15px;
 }
@@ -15,7 +15,7 @@ html{
 }
 }
 
-@media screen and (max-wisth: 800px){
+@media screen and (max-width: 800px){
 
     html {
 
@@ -49,7 +49,7 @@ html{
 
         flex-direction: column;
         text-align: left;
-        width: 80%;
+        width: 100%;
         justify-content: space-around;
         padding-left: 3em;
         height: 0vh;
@@ -58,15 +58,16 @@ html{
 
     ul li {
 
-        margin-bottom: 1.5em;
+        margin-bottom: 4.5em;
         
     }
 
     ul a {
 
         color:white;
-        font-size: 1.1rem;
+        font-size: 1.5rem;
         font-weight: bolder;
+        margin-left: 1.5em;
     }
 
     .home_img {
@@ -90,8 +91,115 @@ html{
     .home_btn{
 
         font-size: 1.05rem;
-        padding: 3em .7em;
+        padding: .3em .7em;
         transition: .5s all ease-in;
        
     }
+}
+
+@media screen and (max-width: 650px) {
+    html {
+
+        font-size: 13px;
+    }
+
+    #bars {
+
+        font-size: 2rem;
+    }
+
+    .home {
+
+    flex-direction: column;
+
+    }
+
+    .home_img_container {
+
+        width: 100%;
+
+    }
+.home_img {
+    width: 70%;
+    display: block;
+    margin: 0 auto;
+
+}
+
+.home_txt_container {
+
+    margin: .5em 0;
+
+}
+
+.quality_container {
+
+flex-direction: column;
+padding: 1em;
+
+}
+
+.quality_container_section {
+    
+    width: 90%;
+
+}
+
+.quality_image_container {
+
+    width: 100%;
+
+}
+
+
+
+.quality_image_container {
+
+width: 100%;
+height: 50%;
+object-fit: contain;
+
+}
+
+.item_img_container {
+
+    width: 90%;
+    margin: 1em auto;
+
+}
+
+.items_images {
+
+    width: 40%;
+}
+
+.items_images img{
+
+width: 90%;
+
+}
+
+.d_none {
+
+    display: none;
+}
+
+.reviews {
+
+    width: 42%;
+
+}
+
+.footer_first, .footer_second, .footer_third, .footer_fourth {
+
+    width: 45%;
+    margin-bottom: 1em;
+
+}
+
+.footer_third, .footer_fourth {
+
+    margin-bottom: 0;
+}
+
 }
