--- a/style.css
+++ b/style.css
@@ -73,13 +73,13 @@ header {
 
 }
 
-ul {
+.ul {
 
     display: flex;
 
 }
 
-ul li {
+.ul li {
 
     margin-left: 1.4em;
     font-size: 1.05;
@@ -88,7 +88,7 @@ ul li {
 
 }
 
-ul a:hover {
+.ul a:hover {
 
 color: var(--orange);
 border-bottom: 1px solid var(--orange);
@@ -115,7 +115,6 @@ margin-top: 4em;
 
     width: 100%;
     animation: shadow 3s linear infinite;
-    margin-top: 1rem;
 
 }
 @keyframes shadow{
@@ -320,7 +319,7 @@ margin-top: 4em;
 
 .review_img {
 
-    width: 100%;
+    width: 100px;
     height: 50px;
     object-fit: contain;
 
