changes in responsive.css

--- a/responsive.css
+++ b/responsive.css
@@ -13,23 +13,18 @@ html{
 
     font-size: 1.2rem;
 }
-}
 
-@media screen and (max-width: 800px){
-
-    html {
-
-        font-size: 14px;
-    }
 
     .logo {
 
         width: 40%;
+        font-size: 1.5rem;
 
     }
 
-    #bars {
+    
 
+    #bars {
         display: block;
         font-size: rem;
     }
@@ -45,7 +40,7 @@ html{
         width: 80%;
     }
 
-    .ul {
+    ul {
 
         flex-direction: column;
         text-align: left;
@@ -68,7 +63,7 @@ html{
         font-size: 1.5rem;
         font-weight: bolder;
         margin-left: 1.5em;
-    }
+    } */
 
     .home_img {
 
@@ -95,111 +90,18 @@ html{
         transition: .5s all ease-in;
        
     }
-}
 
-@media screen and (max-width: 650px) {
-    html {
+    .footer_first, .footer_second, .footer_third, .footer_fourth {
 
-        font-size: 13px;
-    }
-
-    #bars {
-
-        font-size: 2rem;
-    }
-
-    .home {
-
-    flex-direction: column;
-
-    }
-
-    .home_img_container {
-
-        width: 100%;
-
-    }
-.home_img {
-    width: 70%;
-    display: block;
-    margin: 0 auto;
-
-}
-
-.home_txt_container {
-
-    margin: .5em 0;
-
-}
-
-.quality_container {
-
-flex-direction: column;
-padding: 1em;
-
-}
-
-.quality_container_section {
+        width: 45%;
+        margin-bottom: 1em;
     
-    width: 90%;
-
+    }
+    
+    .footer_third, .footer_fourth {
+    
+        margin-bottom: 0;
+    }
+    
 }
 
-.quality_image_container {
-
-    width: 100%;
-
-}
-
-
-
-.quality_image_container {
-
-width: 100%;
-height: 50%;
-object-fit: contain;
-
-}
-
-.item_img_container {
-
-    width: 90%;
-    margin: 1em auto;
-
-}
-
-.items_images {
-
-    width: 40%;
-}
-
-.items_images img{
-
-width: 90%;
-
-}
-
-.d_none {
-
-    display: none;
-}
-
-.reviews {
-
-    width: 42%;
-
-}
-
-.footer_first, .footer_second, .footer_third, .footer_fourth {
-
-    width: 45%;
-    margin-bottom: 1em;
-
-}
-
-.footer_third, .footer_fourth {
-
-    margin-bottom: 0;
-}
-
-}
