--- a/style.css
+++ b/style.css
@@ -73,14 +73,13 @@ header {
 
 }
 
-.ul {
+ul {
 
     display: flex;
 
 }
 
-.ul li {
-
+ul li {
     margin-left: 1.4em;
     font-size: 1.05;
     font-weight: 500;
@@ -88,7 +87,9 @@ header {
 
 }
 
-.ul a:hover {
+
+
+ul a:hover {
 
 color: var(--orange);
 border-bottom: 1px solid var(--orange);
@@ -102,14 +103,15 @@ border-bottom: 1px solid var(--orange);
 }
 
 .home {
-
-    display: flex;
+display: flex;
 align-items: center;
 justify-content: space-around;
 flex-wrap: wrap;
 margin-top: 4em;
 
 }
+
+
 
 .home_img {
 
@@ -411,7 +413,11 @@ margin-top: 4em;
 }
 
 
+
+
 /* footer section ends here */
+
+
 
 
 /* reviews section ends here */
